Don't have fixed width on inputs, introduces horizontal scrollbar.

--- a/web/cobrands/bromley/bromley.scss
+++ b/web/cobrands/bromley/bromley.scss
@@ -11,7 +11,7 @@ input[type=password],
 input[type=email],
 input[type=file],
 textarea, 
-select { background: #fff; border: 1px solid #768b9a; border-color: #768b9a #d1dee8 #d1dee8 #768b9a; color: #333; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; padding: 8px; width: 300px;
+select { background: #fff; border: 1px solid #768b9a; border-color: #768b9a #d1dee8 #d1dee8 #768b9a; color: #333; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; padding: 8px;
 @include border-radius(0); }
 
 .green-btn, button.green-btn, input.green-btn {
